[package]
name = "routrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/routrs/pyroutrs"
documentation = "https://github.com/routrs/pyroutrs"
readme = "README.md"
keywords = ["geography", "routing", "supply-chain", "shortest-path"]

[lib]
name = "routrs"
crate-type = ["cdylib"]


[dependencies.routrs]
version = "1.0.0"
features = ["highways", "railways", "maritime", "concurrency"]

[dependencies.pyo3]
version = "0.21.1"
features = ["abi3-py39", "extension-module"]

[dependencies.maturin]
version = "1.5.1"
optional = true

[features]
default = ["maturin"]
